# kanji-etymology

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
content/kanji/: 一.md  七.md  万.md  三.md  上.md  下.md  中.md  九.md  二.md  五.md  人.md  今.md  休.md  何.md  先.md  入.md  八.md  六.md  円.md  出.md  前.md  力.md  北.md  十.md  千.md  午.md  半.md  南.md  友.md  口.md  右.md  名.md  四.md  国.md  土.md  外.md  大.md  天.md  女.md  好.md  (+58 more)
content/radicals/: 亻.md  儿.md  冖.md  又.md  囗.md  夕.md  宀.md  彳.md  日.md  月.md  木.md  止.md  穴.md  言.md
crates/build-data/: Cargo.toml
crates/build-data/src/: frontmatter.rs  import_kanjidic.rs  index.rs  kana.rs  kanjidic.rs  lib.rs  main.rs  pipeline.rs  skeleton.rs
crates/build-data/tests/fixtures/invalid-broken-link/kanji/: 学.md
crates/build-data/tests/fixtures/invalid-duplicate/kanji/: 学.md  学2.md
crates/build-data/tests/fixtures/invalid-filename-mismatch/kanji/: 日.md
crates/build-data/tests/fixtures/invalid-missing-field/kanji/: 日.md
crates/build-data/tests/fixtures/kanjidic2/: sample.xml
crates/build-data/tests/fixtures/valid/kanji/: 子.md  学.md
crates/build-data/tests/fixtures/valid/radicals/: 冖.md
crates/feedback-worker/: Cargo.toml  wrangler.toml
crates/feedback-worker/.cargo/: config.toml
crates/feedback-worker/src/: lib.rs  logic.rs  worker_handler.rs
crates/kanji-schema/: Cargo.toml
crates/kanji-schema/src/: lib.rs
crates/web/: Cargo.toml  Dioxus.toml  index.html
crates/web/assets/: main.css
crates/web/assets/pwa/: manifest.json
crates/web/src/: api.rs  feedback_modal.rs  main.rs  search.rs  search_modal.rs
crates/web/src/pages/: about.rs  browse.rs  kanji.rs  landing.rs  mod.rs  not_found.rs  radical.rs  radicals.rs  search.rs
docs/: 2026-05-27-kanji-etymology-mvp-design.md  2026-07-11-implementation-plan.md  2026-07-12-phase2-plan.md  content-review-notes.md
docs/superpowers/specs/: 2026-05-27-kanji-etymology-mvp-design.md
public/: sw.js
