[workspace]
resolver = "2"
members = [
    "crates/web",
    "crates/build-data",
    "crates/feedback-worker",
    "crates/kanji-schema",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED" # 라이선스 미정 (README 참조)
repository = ""

# M2에서 도입한 공유 의존성 (build-data ↔ kanji-schema)
[workspace.dependencies]
serde = "1"
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
kanji-schema = { path = "crates/kanji-schema" }
# KANJIDIC2 XML 파싱용 (build-data import-kanjidic 서브커맨드)
quick-xml = "0.36"

# WASM 릴리스 번들 크기 최적화 (설계 15장 리스크 대응)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
