[package]
name = "build-data"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
kanji-schema = { workspace = true }
quick-xml = { workspace = true }
