[package]
name = "feedback-worker"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# 순수 로직(logic 모듈)에서 사용 — host/wasm 공통. host 타겟 단위 테스트가 가능하도록
# 이 두 의존성만 일반 [dependencies]에 둔다.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# workers-rs 바인딩 — wasm32 타겟에서만 필요하다. `worker` crate는 wasm-bindgen 기반이라
# host(x86_64 등) 타겟에서는 링크가 되지 않으므로, target-gated dependency로 분리해
# `cargo build --workspace` 같은 host 빌드가 이 크레이트 때문에 깨지지 않게 한다.
# (버전은 2026-07-11 기준 crates.io 최신 안정 버전)
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.8.5"
